# interviews

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Taskfile.yaml  mypy.ini  pyproject.toml
backend/interviews/: main.py
backend/interviews/application/: auth.py  interview.py  plan.py  uow.py  user.py
backend/interviews/core/: api_client.py  configuration.py  exceptions.py  jwt_auth.py  logger.py  schemas.py
backend/interviews/domain/analysis/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/interviews/domain/auth/: repository.py  schemas.py  service.py
backend/interviews/domain/interview/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/interviews/domain/plan/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/interviews/domain/user/: models.py  repository.py  schemas.py  service.py
backend/interviews/infrastructure/: uow.py
backend/interviews/infrastructure/database/: connection.py
backend/interviews/infrastructure/repository/: base_repository.py
backend/interviews/providers/: anthropic.py  base.py  factory.py  ollama.py  openai.py  whisper.py
backend/interviews/routers/: __init__.py  dependencies.py
backend/interviews/routers/ai/: routers.py
backend/interviews/routers/auth/: depends.py  routers.py
backend/interviews/routers/interview/: depends.py  routers.py
backend/interviews/routers/plan/: depends.py  plan_routers.py  question_routers.py  routers.py
backend/interviews/routers/user/: depends.py  routers.py
backend/interviews/utils/: file_handler.py  validate_static_path.py
backend/interwiews/: main.py
backend/interwiews/application/: auth.py  uow.py  user.py
backend/interwiews/common/: configuration.py  jwt_auth.py
backend/interwiews/core/: configuration.py  jwt_auth.py
backend/interwiews/domain/auth/: models.py  repository.py  schemas.py  service.py
backend/interwiews/domain/user/: exceptions.py  models.py  repository.py  schemas.py  service.py
backend/interwiews/infrastructure/: uow.py
backend/interwiews/infrastructure/database/: base_model.py  connection.py
backend/interwiews/infrastructure/repository/: base_repository.py
backend/interwiews/providers/: anthropic.py  base.py  factory.py  ollama.py  openai.py
backend/interwiews/routers/: __init__.py  dependencies.py
backend/interwiews/routers/auth/: depends.py  routers.py
backend/interwiews/utils/: file_handler.py  validate_static_path.py
backend/migrations/: env.py
backend/migrations/versions/: 0c66101f2745_initial.py  8e26f0f3850d_initial.py  927a29683009_initial.py  ad411140be5c_initial.py  d9ed1319058e_initial.py  e81b3d7790fd_init.py  f811f62d2c57_initial.py  f82d3911c31f_initial.py  f9eda8421eaa_initial.py
backend/seed/: create_admin.py  create_interviews.py  create_plans.py  create_roles.py  main.py
backend/tests/: conftest.py
(+45 files in other folders)
